third trial to fix distortion image under RWD mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -34,6 +34,12 @@
         padding: 2rem 0;
     }
 
+    .wrapper{
+        display: block;
+        width:100%;
+        height:auto;
+    }
+
     #emotion,
     #coding{ 
         width:100%;
